--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -8,6 +8,11 @@
     color: var(--blue-color);
 }
 
+.outlined_white {
+    border: 1px solid #fff;
+    color: #fff;
+}
+
 .size_m {
     font: var(--font-m);
 }
