upgrade Header, change colors in footer and button

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -10,6 +10,7 @@
     --color-background: #F5F5F5; // Светло-серый
     --color-card-bg: #FFFFFF; // Белый
     --color-footer-bg: #1A237E; // Темно-синий насыщенный
+    --color-gray: #acb3c1;
 
     // gradients 
     --color-primary-gradient-from: #1E88E5;
