--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,11 +1,11 @@
 .primary {
-    background: var(--blue-color);
+    background: var(--color-primary);
     color: #fff;
 }
 
 .outlined {
-    border: 1px solid var(--blue-color);
-    color: var(--blue-color);
+    border: 1px solid var(--color-primary);
+    color: var(--color-primary);
 }
 
 .outlined_white {
