decompose entity profile, add any inputs for edit ptofile

--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -21,3 +21,15 @@
 .center {
     text-align: center;
 }
+
+.normal {
+    font-weight: 400;
+}
+
+.medium {
+    font-weight: 500;
+}
+
+.bold {
+    font-weight: 700;
+}
