--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -1,5 +1,5 @@
 .Input {
-    padding: 16px;
+    padding: 8px 16px;
     background-color: white;
     border-radius: 12px;
     border: 1px solid var(--color-secondary);
