add entity VacancyResponses, add page my vacancies

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -12,6 +12,8 @@
     --color-footer-bg: #1A237E; // Темно-синий насыщенный
     --color-gray: #e5e7ed;
     --color-skeleton: #ffffff;
+    --color-green: #4CAF50; // Зеленый
+    --color-red: #FF0000; // Красный
     
     // gradients 
     --color-primary-gradient-from: #1E88E5;
