--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -20,6 +20,20 @@
     color: var(--color-primary);
 }
 
+.green_clear {
+    padding: 0;
+    border: 0;
+    background: transparent;
+    color: #15d722;
+}
+
+.error_clear {
+    padding: 0;
+    border: 0;
+    background: transparent;
+    color: #c91d1d;
+}
+
 .size_m {
     font: var(--font-m);
 }
